--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,6 @@ install:
   - pip install 'tornado<4'
   - pip install -r requirements-test.txt
   - python setup.py install
+  - find /home/travis/virtualenv/python3.4.1/lib/python3.4/site-packages/hy_kernel/
 script:
   - python tests/test_notebook.py
