--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,10 @@ before_install:
   - npm install -g casperjs
   - phantomjs --version
   - casperjs --version
-  - time sudo apt-get install libzmq3-dev
+  - sudo apt-get install libzmq3-dev
 install:
   - pip install 'tornado<4'
   - pip install -r requirements-test.txt
   - python setup.py install
-  - find /home/travis/virtualenv/python3.4.1/lib/python3.4/site-packages/hy_kernel/
 script:
   - python tests/test_notebook.py
