--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,11 @@ before_install:
   - npm install -g casperjs
   - phantomjs --version
   - casperjs --version
-  - sudo apt-get install libzmq3-dev
+  - apt-get install libzmq3-dev
 install:
   - pip install 'tornado<4'
   - pip install -r requirements-test.txt
   - python setup.py install
 script:
-  - python tests/test_notebook.py
+  - flake8 hy_kernel
+  - python setup.py nosetests
