--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
   - npm install -g casperjs
   - phantomjs --version
   - casperjs --version
-  - apt-get install libzmq3-dev
+  - sudo apt-get install libzmq3-dev
 install:
   - pip install 'tornado<4'
   - pip install -r requirements-test.txt
