--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ before_install:
   - phantomjs --version
   - casperjs --version
 install:
+  - pip install IPython[notebook]
   - pip install -r requirements-test.txt
   - python setup.py install
 script:
