--- a/.travis.yml
+++ b/.travis.yml
@@ -7,15 +7,13 @@ sudo: false
 cache:
   directories:
     - node_modules
-    - /home/travis/virtualenv/python3.4.2/lib/python3.4/site-packages
-    - /home/travis/virtualenv/python2.7.9/lib/python2.7/site-packages
+    - $HOME/.pip-cache/
 before_install:
   - npm install -g casperjs
   - phantomjs --version
   - casperjs --version
 install:
-  - pip install IPython[notebook]
-  - pip install -r requirements-test.txt
+  - pip install --download-cache $HOME/.pip-cache IPython[notebook] -r requirements-test.txt
   - python setup.py install
 script:
   - flake8 setup.py hy_kernel
